# agentwarden

./: .gitignore  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
native/session-scanner/: Cargo.toml
native/session-scanner/src/: lib.rs
scripts/: build_native.ts
src/: index.ts
src/commands/: helpers.ts  interactive_scan.ts  mask_secrets.ts  scan.ts  start.ts  status.ts
src/io/: backup.ts  json.ts  jsonl.ts  paths.ts  scan_cache.ts  sqlite.ts
src/providers/: claude.ts  codex.ts  gemini.ts  helpers.ts  index.ts  opencode.ts  types.ts
src/reporting/: sample_display.ts  scan_json.ts  scan_report.ts  scan_table.ts
src/secrets/: catalog.ts  detector.ts  mask.ts  native.ts  options.ts  patterns.ts  plan.ts  types.ts
src/types/: index.ts
tests/: codex_provider.test.ts  interactive_scan.test.ts  native_scanner.test.ts  path_safety.test.ts  scan_cache.test.ts  secrets_behavior.test.ts
