[package]
name = "agentwarden-session-scanner"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
napi = { version = "3.8.3", default-features = false, features = ["napi8"] }
napi-derive = "3.5.2"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"

[build-dependencies]
napi-build = "2.3.1"
